# ReportAutomatization

./: .gitignore  CLAUDE.md  README.md  Tiltfile  build-engine-data.bat  build-engine-integrations.bat  debug_demo_pptx.py  debug_results.json  demo_analysis.txt  demo_analysis_utf8.txt  docker-compose.yml  docker_compose_safe.txt  dod_criteria.md  final_verification.json  init.sql  litellm_config.yaml  project_status.md  targeted_test.json  test_column_extraction.py  test_debug.py  test_final_verification.py  test_json_verify.py  test_large_tol.py  test_output.txt  test_output_utf8.txt  test_real_coords.py  test_unit_column.py
apps/processor/microservices/units/ms-atm-ai/: Dockerfile  README.md  pyproject.toml
apps/processor/microservices/units/ms-atm-ai/src/: config.py  main.py
apps/processor/microservices/units/ms-atm-ai/src/client/: dapr_client.py  litellm_client.py
apps/processor/microservices/units/ms-atm-ai/src/models/: context.py
apps/processor/microservices/units/ms-atm-ai/src/prompts/: prompts.yaml
apps/processor/microservices/units/ms-atm-ai/src/service/: ai_gateway_grpc.py  ai_service.py  prompt_service.py  quota_service.py  rate_limiter.py
apps/processor/microservices/units/ms-atm-ai/tests/: test_ai_service.py  test_quota_service.py  test_rate_limiter.py
apps/processor/microservices/units/ms-atm-cln/: Dockerfile  pyproject.toml
apps/processor/microservices/units/ms-atm-cln/src/: __init__.py  cleanup_worker.py  config.py  main.py
apps/processor/microservices/units/ms-atm-csv/: Dockerfile  pyproject.toml
apps/processor/microservices/units/ms-atm-csv/src/: __init__.py  config.py  main.py
apps/processor/microservices/units/ms-atm-csv/src/client/: __init__.py  blob_client.py
apps/processor/microservices/units/ms-atm-csv/src/models/: __init__.py
apps/processor/microservices/units/ms-atm-csv/src/service/: __init__.py  csv_parser.py  csv_service.py
apps/processor/microservices/units/ms-atm-pdf/: Dockerfile  pyproject.toml
apps/processor/microservices/units/ms-atm-pdf/src/: __init__.py  config.py  main.py
apps/processor/microservices/units/ms-atm-pdf/src/client/: __init__.py  blob_client.py
apps/processor/microservices/units/ms-atm-pdf/src/models/: __init__.py
apps/processor/microservices/units/ms-atm-pdf/src/service/: __init__.py  pdf_parser.py  pdf_service.py
apps/processor/microservices/units/ms-atm-xls/: Dockerfile  README.md  pyproject.toml
apps/processor/microservices/units/ms-atm-xls/src/: config.py  main.py
apps/processor/microservices/units/ms-atm-xls/src/client/: blob_client.py
apps/processor/microservices/units/ms-atm-xls/src/service/: data_type_detector.py  excel_parser.py  excel_service.py
apps/processor/microservices/units/ms-atm-xls/tests/: test_data_type_detector.py  test_excel_parser.py  test_excel_service.py
apps/processor/microservices/units/ms-gen-xls/: Dockerfile  pyproject.toml
apps/processor/microservices/units/ms-gen-xls/src/: config.py  main.py
apps/processor/microservices/units/ms-gen-xls/src/client/: blob_client.py
apps/processor/microservices/units/ms-gen-xls/src/models/: context.py
apps/processor/microservices/units/ms-gen-xls/src/service/: chart_generator.py  excel_renderer.py  generator_service.py
apps/processor/microservices/units/ms-gen-xls/tests/: test_chart_generator.py  test_excel_renderer.py
apps/processor/processor-atomizers/: Dockerfile  README.md  pyproject.toml  test-result.md
apps/processor/processor-atomizers/src/: __init__.py  main.py
apps/processor/processor-atomizers/src/atomizers/: __init__.py
apps/processor/processor-atomizers/src/atomizers/ai/: __init__.py  config.py
apps/processor/processor-atomizers/src/atomizers/ai/client/: __init__.py  dapr_client.py  litellm_client.py
apps/processor/processor-atomizers/src/atomizers/ai/models/: __init__.py  context.py  quota.py
apps/processor/processor-atomizers/src/atomizers/cleanup/: __init__.py  cleanup_worker.py  scheduler.py
apps/processor/processor-atomizers/src/atomizers/csv/: __init__.py  config.py
apps/processor/processor-atomizers/src/atomizers/pdf/: __init__.py  config.py
apps/processor/processor-atomizers/src/atomizers/pptx/: __init__.py  config.py
apps/processor/processor-atomizers/src/atomizers/servicenow/: __init__.py
apps/processor/processor-atomizers/src/atomizers/xls/: __init__.py  config.py
apps/processor/processor-atomizers/src/common/: __init__.py  api_router.py  blob_client.py  config.py  context.py  grpc_server.py  health.py  logging_config.py  tracing.py
apps/processor/processor-atomizers/src/tests/: __init__.py  test_ai_service.py  test_data_type_detector.py  test_excel_parser.py  test_excel_service.py  test_metatable_detector.py  test_pptx_parser.py  test_quota_service.py  test_rate_limiter.py
apps/processor/processor-generators/: Dockerfile  README.md  pyproject.toml  test-result.md
apps/processor/processor-generators/src/: __init__.py  main.py
apps/processor/processor-generators/src/common/: __init__.py  blob_client.py  config.py  grpc_server.py  health.py  logging_config.py  tracing.py
apps/processor/processor-generators/src/generators/: __init__.py
apps/processor/processor-generators/src/generators/pptx/: __init__.py  config.py
apps/processor/processor-generators/src/generators/xls/: __init__.py  config.py  router.py
apps/processor/processor-generators/src/mcp/: __init__.py  config.py  mcp_server.py
apps/processor/processor-generators/src/mcp/auth/: __init__.py  obo_flow.py
apps/processor/processor-generators/src/mcp/client/: __init__.py  ai_client.py
apps/processor/processor-generators/src/mcp/db/: __init__.py  connection.py
apps/processor/processor-generators/src/mcp/tools/: compare_periods.py  query_opex.py  report_status.py  search_documents.py
apps/processor/processor-generators/src/tests/: __init__.py  test_excel_renderer.py  test_mcp_tools.py  test_obo_flow.py  test_placeholder_parser.py  test_pptx_chart_generator.py  test_pptx_renderer.py  test_rls.py  test_sheet_updater.py  test_table_generator.py  test_xls_chart_generator.py
backend/: Dockerfile  (+30 more)
(+2124 files in other folders)
