[project]
name = "ms-atm-cln"
version = "0.1.0"
description = "Cleanup Worker CronJob – removes temporary files from blob storage."
requires-python = ">=3.12"
dependencies = [
    # Azure Blob Storage
    "azure-storage-blob>=12.19.0",
    # Scheduling
    "croniter>=2.0.0",
    # HTTP client
    "httpx>=0.27",
    # Pydantic
    "pydantic>=2.0",
    # Logging
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
